# C-_projects

lab1/: CMakeLists.txt  main.cpp
lab1/mymath/: mymath.cpp  mymath.h
lab1/mymath2/: CMakeLists.txt  mymath2.cpp  mymath2.h
lab2/: CMakeLists.txt  main.cpp
lab2/dom/: CMakeLists.txt  dom.cpp  dom.h
lab2/planeta/: CMakeLists.txt  planeta.cpp  planeta.h
lab3/: CMakeLists.txt  main.cpp
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp
lab4/stack/: CMakeLists.txt  stack.h
lab5/: CMakeLists.txt  main.cpp
lab5/set/: CMakeLists.txt  myset.cpp  myset.h  myvector.h
lab6/: CMakeLists.txt  main.cpp
lab6/uravn/: CMakeLists.txt  polynom.h  term.h
lab7/: CMakeLists.txt  main.cpp
lab7/human/: CMakeLists.txt  workers.cpp  workers.h
lab8/: 222.txt  CMakeLists.txt  main.cpp
